objects/CallReport_Task_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Reminder Task setting for Call report , field Offer Interest equal Interest with condition.</description>
    <fields>
        <fullName>ReminderTask_NumOfDays__c</fullName>
        <description>for set duedate of reminder task from create call report plus this value</description>
        <label>ReminderTask_NumOfDays</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReminderTask_Subject__c</fullName>
        <label>ReminderTask_Subject</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReminderTask_TimeReminder__c</fullName>
        <description>Time to Reminder Task when create Call Report</description>
        <inlineHelpText>Please use format HH:MM Ex. 08:00</inlineHelpText>
        <label>ReminderTask_TimeReminder</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>CallReport_Task_Setting</label>
</CustomObject>